<resources>
    <string name="app_name">App.main</string>

    <!-- Title -->
    <string name="title_news">新闻</string>
    <string name="title_other">其他</string>
    <string name="title_photo">图片</string>
    <string name="title_video">视频</string>
    <string name="title_media">头条号</string>

    <!--Navigation Item-->
    <string name="nav_account">个人</string>
    <string name="nav_switch_night_mode">切换主题</string>
    <string name="nav_setting">设置</string>
    <string name="nav_share">分享</string>
    <string name="test_plugin">测试更新插件</string>
    <string name="test_plugin_add">测试新增插件</string>
    <string name="title_activity_ffsttmain">FFSTTMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="placeholder_tx">缺失当前插件</string>
</resources>
